# ACME

./: .gitignore  CMakeLists.txt  README.md  test.sh
src/: acme.cpp  acme.h  branchelement.h  cast.cpp  cast.h  common.h  distance.hpp  main.cpp  occurrenceelement.h
test/: test_sequence.txt  test_sequence_f_2_d_0.answer  test_sequence_f_2_d_1.answer  test_sequence_f_3_d_2.answer  test_sequence_f_5_d_0.answer
